--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Playwright
-node_modules/
 /test-results/
 /playwright-report/
 /blob-report/
+/artifacts/
 /playwright/.cache/
 /playwright/.auth/
+
+# Reports & artifacts
+*.zip
+*.webm
+*.png
+*.mp4
+*.json
+
+# Environment
+.env
+.env.*
+
+# TypeScript
+dist/
+build/
+*.tsbuildinfo
+
+# OS/system files
+.DS_Store
+Thumbs.db
